<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".DemoExActivity">

    <TextView
        android:id="@+id/a"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:textSize="50sp"
        android:layout_margin="15dp"
        android:text="@string/a"/>
    <TextView
        android:id="@+id/b"
        android:layout_width="60dp"
        android:textSize="50sp"
        android:layout_margin="15dp"
        android:layout_height="60dp"
        android:text="@string/b"/>
    <TextView
        android:id="@+id/c"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="15dp"
        android:textSize="50sp"
        android:text="@string/c"/>
    <TextView
        android:id="@+id/d"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:textSize="50sp"
        android:layout_margin="15dp"
        android:text="@string/d"/>
    <TextView
        android:id="@+id/e"
        android:layout_width="60dp"
        android:textSize="50sp"
        android:layout_margin="15dp"
        android:layout_height="60dp"
        android:text="@string/e"/>

    <ImageView
        android:id="@+id/imageViewSvg"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="15dp"/>

    <!--
        android:background="@drawable/octicons"-->
</LinearLayout>