<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/regular"
        android:padding="8dp"
        android:text="@string/all"
        android:gravity="center_horizontal"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvDraft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/regular"
        android:padding="8dp"
        android:text="@string/draft"
        android:gravity="center_horizontal"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvSaved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/regular"
        android:padding="8dp"
        android:text="@string/saved"
        android:gravity="center_horizontal"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvSynced"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/regular"
        android:padding="8dp"
        android:text="@string/synced"
        android:gravity="center_horizontal"
        android:textSize="16sp" />



    <!--<Button
        android:id="@+id/applyFilterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Apply"
        android:textSize="18sp"
        android:fontFamily="@font/regular"
        android:layout_gravity="end" />-->

</LinearLayout>